--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP865vAUZIPJx7/RsRyRiMh",
+      "authorship_tag": "ABX9TyOczWwxVQV+oy7+55lKTCmo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -900,10 +900,597 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Tensor Datatypes\n",
+        "\n",
+        "**Note:**  Tensor datatypes is one of the 3 big errors you will run into with PyTorch & Deep Learning\n",
+        "1. Tensors not right datatype\n",
+        "2. Tensors not right shape\n",
+        "3. Tensors not on the right device"
+      ],
+      "metadata": {
+        "id": "CoD8duKX-TZ9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Float 32 tensor\n",
+        "float_32_tensor = torch.tensor([3.0, 6.0, 9.0],\n",
+        "                               dtype=None, # What datatype is the tensor (eg. float32, float64)\n",
+        "                               device=None, # Which device is this tensor on (eg: cpu, cuda/gpu)\n",
+        "                               requires_grad=False) # Whether or not to track gradients for this tensor's operations\n",
+        "float_32_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "98kNfmtL-0f2",
+        "outputId": "3c4f4b79-94ac-42fc-d73e-587a410e1dd4"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([3., 6., 9.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 82
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "float_32_tensor.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MnwIY66c_DvR",
+        "outputId": "54e57281-4188-41c1-aadc-05fdeac2484a"
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.float32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Float 16 tensor\n",
+        "float_16_tensor = float_32_tensor.type(torch.float16)\n",
+        "float_16_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EJv-PRVCArmF",
+        "outputId": "474609b2-75e2-4ddc-b832-d90ef4103127"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([3., 6., 9.], dtype=torch.float16)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "float_16_tensor * float_32_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rsVjQ7TiA1x_",
+        "outputId": "a69d92cb-c6a5-4758-d256-fcbe48176aad"
+      },
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 9., 36., 81.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 86
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "int_32_tensor = torch.tensor([3, 6, 9],\n",
+        "                             dtype=torch.int32)\n",
+        "int_32_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rlumbeTaBALY",
+        "outputId": "a292116b-9640-4e4c-e8e8-1a6e8cf1153b"
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([3, 6, 9], dtype=torch.int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 91
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "float_32_tensor * int_32_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "01gc9Y1pBaPc",
+        "outputId": "ad8ae506-36b6-4c8e-f3ca-b44afb906378"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 9., 36., 81.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 92
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Getting information from tensors (Tensor Attributes)\n",
+        "\n",
+        "1. Tensors not right datatype - to get datatype from a tensor, can use `tensor.dtype`\n",
+        "2. Tensors not right shape - to get shape from a tensor, can use `tensor.shape`\n",
+        "3. Tensors not on the right device - to get device from a tensor, can use `tensor.device`"
+      ],
+      "metadata": {
+        "id": "iUeA09J7BcHl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a tensor\n",
+        "some_tensor = torch.rand([3, 4])\n",
+        "some_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4iCSP5NSB4X8",
+        "outputId": "af7bfe0e-01cc-4944-ea9d-70e88e18913e"
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.5572, 0.7163, 0.4098, 0.9641],\n",
+              "        [0.6308, 0.2752, 0.1947, 0.6385],\n",
+              "        [0.2760, 0.7346, 0.2605, 0.0666]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 94
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Find out details about some_tensor\n",
+        "print(some_tensor)\n",
+        "print(f\"Datatype of some_tensor: {some_tensor.dtype}\")\n",
+        "print(f\"Shape of some_tensor: {some_tensor.shape}\")\n",
+        "print(f\"Device of some_tensor: {some_tensor.device}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SYvXQmlaCQUZ",
+        "outputId": "2f69f6d1-3d68-450d-a9e4-bcf87fcd6de4"
+      },
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[0.5572, 0.7163, 0.4098, 0.9641],\n",
+            "        [0.6308, 0.2752, 0.1947, 0.6385],\n",
+            "        [0.2760, 0.7346, 0.2605, 0.0666]])\n",
+            "Datatype of some_tensor: torch.float32\n",
+            "Shape of some_tensor: torch.Size([3, 4])\n",
+            "Device of some_tensor: cpu\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Manipulating Tensors (tensor operations)\n",
+        "\n",
+        "Tensor operations include:\n",
+        "1. Addition\n",
+        "2. Subtraction\n",
+        "3. Multiplication (element-wise)\n",
+        "4. Division\n",
+        "5. Matrix Multiplication"
+      ],
+      "metadata": {
+        "id": "Ys0_els2CksV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a tensor and add 10 to it\n",
+        "tensor = torch.tensor([1, 2, 3])\n",
+        "tensor + 10"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FcecEEhRDKZ1",
+        "outputId": "71126a37-1b5b-476d-dbb9-4fff2e7b92b1"
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([11, 12, 13])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 96
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Multiply tensor by 10\n",
+        "tensor * 10"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fRShirCUDaZg",
+        "outputId": "fc52d866-ac79-4879-d069-264e5fb1e0e9"
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([10, 20, 30])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 98
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2byMzd2sDgFj",
+        "outputId": "70af7765-6962-457f-bc3d-7a6da5c0a2bb"
+      },
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1, 2, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 99
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# subtract\n",
+        "tensor - 10"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n1w3TvUYDjFG",
+        "outputId": "ddf6dbbc-78d5-40ff-c260-5a72adb48801"
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([-9, -8, -7])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Try out PyTorch in-built functions\n",
+        "torch.mul(tensor, 10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "td6eG043DtlB",
+        "outputId": "ebc920f5-153f-438c-ce41-ced9693bf60c"
+      },
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([11, 12, 13])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 103
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.add(tensor, 10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1MEGuCkPD4Fr",
+        "outputId": "646f7334-2dce-43c5-a2f2-180a7c78ffa6"
+      },
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([11, 12, 13])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 104
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Matrix Multiplication\n",
+        "\n",
+        "Two main ways of performing matrix multiplication in neural networks and deep learning\n",
+        "\n",
+        "1. Element-wise multiplication\n",
+        "2. Matrix multiplication (Dot Product)"
+      ],
+      "metadata": {
+        "id": "9sObsvlVEA2b"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Element wise multiplication\n",
+        "\n",
+        "print(tensor, \"*\", tensor)\n",
+        "print(f\"Equals: \", tensor * tensor)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fpDwZ-0QFFsQ",
+        "outputId": "089501f2-e729-4f57-d918-4423f91af937"
+      },
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([1, 2, 3]) * tensor([1, 2, 3])\n",
+            "Equals:  tensor([1, 4, 9])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sample_tensor1 = torch.tensor([[1, 2, 3],\n",
+        "                       [4, 5, 6]])\n",
+        "sample_tensor1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mub4qPKOEY4y",
+        "outputId": "6627db4c-bfa0-41ff-f0eb-fd588c95df4d"
+      },
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 2, 3],\n",
+              "        [4, 5, 6]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 111
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sample_tensor2 = torch.tensor([[7, 8],\n",
+        "                                [9, 10],\n",
+        "                                 [11, 12]])\n",
+        "sample_tensor2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rCr4hx7ZEZ6B",
+        "outputId": "330ce55b-8bab-4a1f-ac89-abf2191c405a"
+      },
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 7,  8],\n",
+              "        [ 9, 10],\n",
+              "        [11, 12]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 112
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Matrix Multiplication (Dot Product)\n",
+        "sample_tensor1.matmul(sample_tensor2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cakUbd5_EZ3G",
+        "outputId": "92728c46-98b0-4ec9-c755-ae7b32aebf38"
+      },
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 58,  64],\n",
+              "        [139, 154]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 115
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.matmul(sample_tensor1, sample_tensor2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RyzAIdYOEZ0H",
+        "outputId": "b94d2b20-bf79-44aa-946d-ce19cefae3c0"
+      },
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 58,  64],\n",
+              "        [139, 154]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 116
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "CoD8duKX-TZ9"
+        "id": "eZOqB1cLEZuZ"
       },
       "execution_count": null,
       "outputs": []
