--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOczWwxVQV+oy7+55lKTCmo",
+      "authorship_tag": "ABX9TyNDU4aBHmDcubiRAfGtPnNl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1338,7 +1338,16 @@
         "Two main ways of performing matrix multiplication in neural networks and deep learning\n",
         "\n",
         "1. Element-wise multiplication\n",
-        "2. Matrix multiplication (Dot Product)"
+        "2. Matrix multiplication (Dot Product)\n",
+        "\n",
+        "There are two main rules that performing matrix multiplication needs to satisfy:\n",
+        "1. The **inner dimensions** must match:\n",
+        "* `(3, 2) @ (3, 2)` won't work\n",
+        "* `(3, 2) @ (2, 3)` will work\n",
+        "* `(2, 3) @ (3, 2)` will work\n",
+        "2. The resulting matrix has the shape of the **outer dimensions**:\n",
+        "* `(2, 3) @ (3, 2)` -> `(2, 2)`\n",
+        "* `(3, 2) @ (2, 3)` -> `(3, 3)`"
       ],
       "metadata": {
         "id": "9sObsvlVEA2b"
@@ -1487,10 +1496,119 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### One of the most common errors in deep learning: shape errors"
+      ],
+      "metadata": {
+        "id": "eZOqB1cLEZuZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sample_tensor3 = torch.tensor([[7, 8],\n",
+        "                                [9, 10],\n",
+        "                                 [11, 12]])\n",
+        "sample_tensor4 = torch.tensor([[7, 8],\n",
+        "                                [9, 10],\n",
+        "                                 [11, 12]])\n",
+        "torch.matmul(sample_tensor3, sample_tensor4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 180
+        },
+        "id": "QIPZFGUUHu0Z",
+        "outputId": "bec271d7-3115-4ff9-fea6-0b95b8003d61"
+      },
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "RuntimeError",
+          "evalue": "mat1 and mat2 shapes cannot be multiplied (3x2 and 3x2)",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-118-f42d7d7e4745>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m                                 \u001b[0;34m[\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m                                  [11, 12]])\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatmul\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_tensor3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_tensor4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m: mat1 and mat2 shapes cannot be multiplied (3x2 and 3x2)"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### To fix tensor shape issues, we can manipulate the shape of one of our tensors using transpose\n",
+        "\n",
+        "A **transpose** switches the axes or dimensions of a given tensor"
+      ],
+      "metadata": {
+        "id": "hlUm1POoHyok"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sample_tensor4.T"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2_ONzzayIEh5",
+        "outputId": "7a155a21-0dc0-4726-d9e6-e2cfa1e9a7b7"
+      },
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 7,  9, 11],\n",
+              "        [ 8, 10, 12]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 119
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.matmul(sample_tensor3, sample_tensor4.T)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D0DqY1IkIQUw",
+        "outputId": "e55fdaf2-2a71-4744-d1dc-440cc84c6a95"
+      },
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[113, 143, 173],\n",
+              "        [143, 181, 219],\n",
+              "        [173, 219, 265]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 121
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "eZOqB1cLEZuZ"
+        "id": "DUECe7z7IXnr"
       },
       "execution_count": null,
       "outputs": []
